--- a/src/variables.scss
+++ b/src/variables.scss
@@ -2,5 +2,6 @@ $black: #454545;
 $green: #379c37;
 $red: #d30000;
 
+$mobile: 700px;
 $navbar-height: 38px;
 $navbar-item-padding: 10px;
